test/parsing/ferguson/assign-in-conditional.good
assign-in-conditional.chpl:4: error: Use == to check for equality in a conditional
