test/parsing/ferguson/assign-in-conditional.chpl
var a = 1;
var b = 2;

if a = b {
  writeln("Equal");
} else {
  writeln("Different");
}
